--- a/src/content/products/t845.md
+++ b/src/content/products/t845.md
@@ -1,13 +1,13 @@
 ---
-title: "SF-TB T845"
-description: "Machine Screws"
+title: "Plastic Crusher"
+description: "Heavy-Duty Plastic Crusher Machines for Efficient Recycling"
 main:
   id: 1
   content: |
-    Introducing the SF-TB T845 – your go-to solution for precision fastening in machinery and equipment. This comprehensive set of machine screws is meticulously crafted to meet the stringent demands of industrial applications, ensuring secure and reliable fastening.
-  imgCard: "@/images/product-image-1.avif"
-  imgMain: "@/images/product-image-main-1.avif"
-  imgAlt: "Mockup boxes of machine screws set"
+    Our standard heavy-duty plastic granulator machines, sometimes called plastic crushers, are essential machines in the plastic recycling industry. These specially designed granulators are extremely durable and have the unique ability to quickly and efficiently cut various plastic streams into small uniform flakes or regrinds.
+  imgCard: "@/images/Plastic Crusher-02.webp"
+  imgMain: "@/images/Plastic Crusher-01.webp"
+  imgAlt: "The image shows a plastic granulator machine. It is used to recycle plastic waste by breaking it down into smaller pieces. The machine has a hopper on top where the plastic waste is fed, and a chamber below where the plastic is shredded. The shredded plastic is then expelled from the machine through a discharge chute."
 tabs:
   - id: "tabs-with-card-item-1"
     dataTab: "#tabs-with-card-1"
@@ -21,16 +21,23 @@ tabs:
 longDescription:
   title: "Precision Fastening Solutions"
   subTitle: |
-    The SF-TB T845 Machine Screws offer unparalleled precision and reliability for industrial applications, ensuring seamless operation and longevity for your machinery and equipment.
-  btnTitle: "Contact sales to learn more"
-  btnURL: "#"
+    As one of our most sold type of plastic recycling machine, these granulators are packaged in many of our complete recycling solutions including our popular PET bottle washing lines, plastic film recycling lines,and more.
+  btnTitle: "learn more"
+  btnURL: "https://www.recyclemachine.net/"
 descriptionList:
-  - title: "Durability"
-    subTitle: "Crafted from high-quality materials, these machine screws are built to withstand the rigors of industrial environments."
-  - title: "Precision Engineering"
-    subTitle: "Engineered with precision-cut threads and exact specifications, ensuring a tight and secure fit for every application."
+  - title: "Working Principle"
+    subTitle: "At the core of our plastic granulator machine is an open rotor mounted with heavy-duty knives in either a double-scissor cut or v-shape array based on your requirements. As the rotor is spun at high speeds, the rotor knives come in contact with stationary knives that are mounted within the cutting chamber. The material is continuously cut until they are small enough to pass through a screen filter.<br>
+
+Generally speaking, our filter screens are between 10mm to 100mm but can be customized according to your requirements.<br>
+
+Our standard plastic granulator houses 12 rotor and 3 stationary knives. All knives use only ultra durable D2 (equivalent to SDK11) high-carbon, high-chromium steel which ensures the longest usage times before requiring sharpening. All knives are easily adjustable with hydraulic assisted access to the cutting chamber."
+  - title: "Applications"
+    subTitle: "This general purpose plastic granulator can be used in a variety of applications for plastic recycling including but not limited to grinding plastic bottles, films, and a variety of small rigid plastics.<br>
+
+For added convenience, we also offer wet plastic granulator machines that have additional rubber sealing and water inlet hose attached allowing a constant stream of water to be sprayed while the plastic is being cut. This helps clean the plastic scrap while keeping the blades cool during operation."
   - title: "Versatility"
     subTitle: "Suitable for a wide range of machinery and equipment, providing versatile fastening solutions for various industrial needs."
+
 specificationsLeft:
   - title: "Material Composition"
     subTitle: "Constructed from premium-grade steel or alloy for exceptional strength and durability."
@@ -41,14 +48,8 @@ specificationsLeft:
   - title: "Size Range"
     subTitle: "Available in various sizes and lengths to accommodate different machinery and equipment specifications."
 specificationsRight:
-  - title: "Thread Specifications"
-    subTitle: "Precision-engineered threads ensure optimal grip and reliability, even in high-vibration environments."
-  - title: "Load Capacity"
-    subTitle: "Designed to meet or exceed industry standards for load-bearing capacity, ensuring safe and reliable operation."
-  - title: "Certifications"
-    subTitle: "Compliant with relevant industry standards and certifications, guaranteeing quality and reliability."
-  - title: "Applications"
-    subTitle: "Ideal for use in a wide range of industrial machinery, equipment, and assemblies that demand precise and secure fastening."
+  - title: "Specifications"
+    subTitle: "Model"
 blueprints:
   first: "@/images/blueprint-1.avif"
   second: "@/images/blueprint-2.avif"
